syntax = "proto3";

package proto;

service MonitorManager{
rpc Register(RegisterReq) returns (RegisterResp){}
rpc KeepAlive(KeepAliveReq) returns (KeepAliveResp){}
}

message RegisterReq{
	string iP = 1;
	string hostName = 2;
	repeated string roles = 3;
	string master = 4;
	string controllerIP = 5;
}

message RegisterResp{
	bool success = 1;
	string msg = 2;
}

message KeepAliveReq{
string iP = 1;
repeated string roles = 2;
string cpuUsage = 3;
string memUsage = 4;
bool dnsAlive = 5;
bool dhcpAlive = 6;
string Master = 7;
string controllerIP = 8;
}

message KeepAliveResp{
	bool success = 1;
	string msg = 2;
}
